--- a/public/index.html
+++ b/public/index.html
@@ -31,25 +31,41 @@
         </ul>
         <div class="navbar__user">
           <img src="./img/walter-white.jpg" alt="User image">
-          <span>Walter White</span>
+          <a href="">Walter White</a>
         </div>
       </nav>
       <div class="featured container">
         <h1 class="featured__title">MAD MAX: Estrada da Fúria</h1>
-        <div class="fetured__labels">
-          <ul>
-            <li>Aventura</li>
-            <li>SCI-FI</li>
-            <li>Terror</li>
-          </ul>
+        <ul class="featured__labels">
+          <li class="featured__labels__item">Aventura</li>
+          <li class="featured__labels__item">SCI-FI</li>
+          <li class="featured__labels__item">Terror</li>
+        </ul>
+        <a href="#" class="featured__button">
+          Assistir Trailer
+          <i class="fa fa-play-circle-o"></i>
+        </a>
+        <div class="featured__info">
+          <p>Nos cinemas</p>
+          <p>15 de Outubro (Brasil)</p>
         </div>
-        <button>Assistir Trailer</button>
-        <p>Nos cinemas</p>
-        <p>15 de Outubro (Brasil)</p>
       </div>
     </header>
     <main>
-
+      <section class="catalog">
+        <nav class="catalog__menu">
+          <ul>
+            <li><a href="#">No cinema</a></li>
+            <li><a href="#">Em breve</a></li>
+            <li><a href="#">Bilheteria</a></li>
+            <li><a href="#">Séries</a></li>
+            <li><a href="#">Trailers</a></li>
+          </ul>
+        </nav>
+      </section>
     </main>
+    <footer>
+
+    </footer>
 	</body>
 </html>
