--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         </div>
       </nav>
       <div class="featured container">
-        <h1 class="featured__title">MAD MAX: Estrada da Fúria</h1>
+        <h2 class="featured__title">MAD MAX: Estrada da Fúria</h2>
         <ul class="featured__labels">
           <li class="featured__labels__item">Aventura</li>
           <li class="featured__labels__item">SCI-FI</li>
@@ -47,7 +47,7 @@
         </a>
         <div class="featured__info">
           <p>Nos cinemas</p>
-          <p>15 de Outubro (Brasil)</p>
+          <p>15 de Outubro de 2015 (Brasil)</p>
         </div>
       </div>
     </header>
@@ -62,10 +62,182 @@
             <li><a href="#">Trailers</a></li>
           </ul>
         </nav>
+        <div class="container">
+          <ul class="catalog__items">
+            <li class="card">
+              <img class="card__hero" src="./img/poster-moonlight.jpg" alt="Moonlight">
+              <div class="card__content">
+                <h3 class="card__title">Moonlight</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-bladerunner.jpg" alt="Blade Runner">
+              <div class="card__content">
+                <h3 class="card__title">Blade Runner</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-mad-max.jpg" alt="Mad Max">
+              <div class="card__content">
+                <h3 class="card__title">Mad Max</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-alita.jpg" alt="Alita">
+              <div class="card__content">
+                <h3 class="card__title">Alita</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-batman-superman.jpg" alt="Batman VS Superman">
+              <div class="card__content">
+                <h3 class="card__title">Batman VS Superman</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-jurassic-world.jpg" alt="Jurassic World">
+              <div class="card__content">
+                <h3 class="card__title">Jurassic World</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-guerra-civil.jpg" alt="Guerra Civil">
+              <div class="card__content">
+                <h3 class="card__title">Guerra Civil</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-capita-marvel.jpg" alt="Capitã Marvel">
+              <div class="card__content">
+                <h3 class="card__title">Capitã Marvel</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-coringa.jpg" alt="Coringa">
+              <div class="card__content">
+                <h3 class="card__title">Coringa</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-liga-justica.jpg" alt="Liga da Justiça">
+              <div class="card__content">
+                <h3 class="card__title">Liga da Justiça</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-star-wars.jpg" alt="Star Wars VII">
+              <div class="card__content">
+                <h3 class="card__title">Star Wars VII</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <img class="card__hero" src="./img/poster-pantera-negra.jpg" alt="Pantera Negra">
+              <div class="card__content">
+                <h3 class="card__title">Pantera Negra</h3>
+                <p class="card__labels">
+                  <a href="#">Anime</a>
+                </p>
+                <div class="card__footer">
+                  <i class="fa fa-heart"></i>
+                  <span>7.0</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+      <div class="footer__content container">
+        <img src="./img/logo-imdb.jpg" alt="IMDB">
+        <div class="footer__social">
+          <ul>
+            <li>
+              <a class="icon--twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+            <li>
+              <a class="icon--facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li>
+              <a class="icon--instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
 	</body>
 </html>
